Demo and docs improved

--- a/codepen-embed.html
+++ b/codepen-embed.html
@@ -4,7 +4,7 @@ Copyright (c) 2016 John 'Mr Magoo' Clarke. All rights reserved.
 This code may only be used under the MIT license found at https://raw.githubusercontent.com/TheMagoo73/codepen-embed/master/license.md
 -->
 
-<link rel="import" href="bower_components/polymer/polymer.html">
+<link rel="import" href="../polymer/polymer.html">
 
 <!--
 ## &lt;codepen-embed&gt;
@@ -18,6 +18,7 @@ Example:
 
 <coedpen-embed penId="ab123r" height="450"></codepen-embed>
 ```
+@demo demo/index.html
 -->
 
 <dom-module id="codepen-embed">
