--- a/demo/index.html
+++ b/demo/index.html
@@ -20,7 +20,7 @@
       <h3>Basic codepen-embed Demo</h3>
       <demo-snippet>
         <template>
-          <codepen-embed></codepen-embed>
+          <codepen-embed height="400" pen-id="zBrpBL"></codepen-embed>
         </template>
       </demo-snippet>
     </div>
